# magos

./: .gitignore  .pre-commit-config.yaml  README.md  agos_opcode.py  chiper.py  gamepc.py  gamepc_script.py  gmepack.py  magos.py  merge-gme.py  merge-voc.py  merge_gamepc.py  merge_gme.py  merge_voc.py  pyproject.toml  read_tables.py  split-gme.py  split-voc.py  split_gamepc.py  split_gme.py  split_voc.py  stream.py  voice.py
.github/workflows/: main.yml
src/magos/: agos_opcode.py  chiper.py  detection.py  gamepc.py  gamepc_script.py  gmepack.py  magos.py  stream.py  voice.py  zone.py
src/magos/data/: image_reader.py  read_font.py
src/magos/interactive/: directory.py  main.py  widgets.py
src/magos/parser/: items.py  params.py  script.py  tables.py
tests/: test_parser.py  test_parser_fuzzing.py
