[tool.poetry]
name = "magos"
version = "0.5.0"
description = "Tools for editing AGOS games (e.g. Simon the Sorcerer by AdventureSoft)"
authors = ["BLooperZ <blooperz@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
keywords = ["agos", "simon", "sorcerer", "feeble", "adventure"]
repository = "https://github.com/adventurebrew/magos"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
typing-extensions = "^4.3.0"
numpy = "^1.23.1"
Pillow = "^9.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = "^22.6.0"

[tool.poetry.group.release.dependencies]
pip-licenses = "^4.0.3"
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
